# Ogiwara-Labo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/application/: application.cpp  application.h  config.h  fps_counter.h
src/application/input/: keyboard.h  toggle_key.h
src/math/: array_2d.h  file.h  glm.h  id.h  non_copyable.h  non_movable.h  perlin_noise.h  random.h  ray.h  singleton.h  smooth_inter_polation.h  vector_xz.h
src/minecraft/: player.cpp  player.h
src/minecraft/block/: block.h
src/minecraft/entity/: entity.h  item_entity.h
src/minecraft/event/: block_break_event.h  event.h  player_input_event.h
src/minecraft/level/: chunk_manager.cpp  chunk_manager.h  const.h  level.cpp  level.h
src/physics/: aabb.h  base.h  simulation.cpp  simulation.h
src/physics/collision/: closest_function.cpp  closest_function.h  convex_convex_contact.cpp  convex_convex_contact.h  vector_function.h
src/physics/element/: Collidable.h  Constraint.h  Contact.cpp  Contact.h  ConvexMesh.cpp  ConvexMesh.h  Pair.h  RigidBoby.h  Shape.h  SolverBody.h  State.h
src/physics/pipeline/: Allocator.h  Broadphase.cpp  Broadphase.h  CollisionDetection.cpp  CollisionDetection.h  ConstraintSolver.cpp  ConstraintSolver.h  Integrate.cpp  Integrate.h  Sort.h
src/render/: camera.cpp  camera.h  chunk_mesh.cpp  chunk_mesh.h  chunk_mesh_builder.cpp  chunk_mesh_builder.h  frustum.cpp  frustum.h  mesh.cpp  mesh.h  opengl_debug.h  render_master.cpp  render_master.h
src/render/block/: block_appearance.h  block_database.h
src/render/builder/: chunk_mesh_builder.cpp  chunk_mesh_builder.h  entity_mesh_builder.cpp  entity_mesh_builder.h  level_mesh_builder.cpp  level_mesh_builder.h
src/render/mesh/: chunk_mesh.cpp  entity_mesh.cpp  entity_mesh.h  mesh.h
src/render/renderer/: chunk_renderer.cpp  chunk_renderer.h  entity_renderer.cpp  entity_renderer.h  flora_renderer.cpp  flora_renderer.h  level_renderer.h  moving_triangle_renderer.h  render_master.cpp  render_master.h  sfml_renderer.cpp  sfml_renderer.h  sky_box_renderer.cpp  sky_box_renderer.h  text_renderer.h  triangle_renderer.h  water_renderer.cpp  water_renderer.h
src/render/shader/: chunk_shader.h  entity_shader.h  flora_shader.h  shader.cpp  shader.h  shader_loader.h  sky_box_shader.h  triangle_shader.h  water_shader.h
test/: example.cpp  glm.cpp  pointer.cpp
(+24 files in other folders)
